--- a/index.html
+++ b/index.html
@@ -11,7 +11,43 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+  <div class="row align-items-start">
+    <div class="col">
+    <h1 class="text-center p-5">Welcome Buddy!</h1>
+    </div>
+
+  </div>
+  <div class="row align-items-center">
+    <div class="col d-flex justify-content-center my-3">
+      <div class="card" style="width: 18rem;">
+  <div class="card-body">
+<img src="./images/Study.JPG" class="card-img-top" alt="Study">
+    <p class="card-text">Are you in the mood to study?</p>
+
+  </div>
+</div>
+    </div>
+    <div class="col d-flex justify-content-center my-3">
+      <div class="card" style="width: 18rem;">
+  <div class="card-body">
+<img src="./images/fun.JPG" class="card-img-top" alt="Study">
+    <p class="card-text">Are you in the mood to have fun?</p>
+
+  </div>
+</div>
+    </div>
+    <div class="col d-flex justify-content-center my-3">
+      <div class="card" style="width: 18rem;">
+  <div class="card-body">
+<img src="./images/adminn.JPG" class="card-img-top" alt="Study">
+    <p class="card-text">Got any work in the admin section?</p>
+
+  </div>
+</div>
+    </div>
+  </div>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
