--- a/index.html
+++ b/index.html
@@ -1,63 +1,72 @@
+
+
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <head>
+      <!-- Required meta tags -->
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <!-- Bootstrap CSS -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <link href="style.css" rel="stylesheet">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <title>Fresher's Guide | GDSC JSSSSTU</title>
+    </head>
+   <body>
+      <div class="container-fluid">
+         <div class="row bg-white px-3">
+             <div class="col-lg-9 col-md-7 pt-3 py-md-3">
+                 <h3 class="text-center text-md-start">Fresher's Guide</h3>
+             </div>
+             <div class="col-lg-3 col-md-5 logo pb-2 py-md-2 d-flex justify-content-center justify-content-lg-start">
+                 <a href="https://dscjssstu.in" target="_blank">
+                     <img src="./images/logo.PNG" alt="logo"/>
+                 </a>
+             </div>
+         </div>
+     </div>
+  
+      <div class="container-fluid main-div">
+      <div class="row align-items-start">
+         <div class="col">
+            <h1 class="text-center text-white p-5 fw-bold">Welcome Buddy!</h1>
+         </div>
+      </div>
+      <div class="row welcome-row d-flex justify-content-center">
+         <div class="col-md-3 d-flex justify-content-center my-3">
+           <a href="./study.html">
+              <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <img src="./images/Study.JPG" class="card-img-top" alt="Study">
+                  <p class="card-text my-3">Are you in the mood to study?</p>
+                </div>
+            </div>
+           </a>
+         </div>
+         <div class="col-md-3 d-flex justify-content-center my-3">
+          <a href="./fun.html">
+            <div class="card" style="width: 18rem;">
+               <div class="card-body">
+                  <img src="./images/fun.JPG" class="card-img-top" alt="Study">
+                  <p class="card-text my-3">Are you in the mood to have fun?</p>
+               </div>
+            </div>
+          </a>
+         </div>
+         <div class="col-md-3 d-flex justify-content-center my-3">
+           <a href="./admin.html">
+            <div class="card" style="width: 18rem;">
+               <div class="card-body">
+                  <img src="./images/adminn.JPG" class="card-img-top" alt="Study">
+                  <p class="card-text my-3">Got any work with the admin?</p>
+               </div>
+            </div>
+          </a>
+         </div>
+      </div>
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <div class="container">
-  <div class="row align-items-start">
-    <div class="col">
-    <h1 class="text-center p-5">Welcome Buddy!</h1>
-    </div>
-
-  </div>
-  <div class="row align-items-center">
-    <div class="col d-flex justify-content-center my-3">
-      <div class="card" style="width: 18rem;">
-  <div class="card-body">
-<img src="./images/Study.JPG" class="card-img-top" alt="Study">
-    <p class="card-text">Are you in the mood to study?</p>
-
-  </div>
-</div>
-    </div>
-    <div class="col d-flex justify-content-center my-3">
-      <div class="card" style="width: 18rem;">
-  <div class="card-body">
-<img src="./images/fun.JPG" class="card-img-top" alt="Study">
-    <p class="card-text">Are you in the mood to have fun?</p>
-
-  </div>
-</div>
-    </div>
-    <div class="col d-flex justify-content-center my-3">
-      <div class="card" style="width: 18rem;">
-  <div class="card-body">
-<img src="./images/adminn.JPG" class="card-img-top" alt="Study">
-    <p class="card-text">Got any work in the admin section?</p>
-
-  </div>
-</div>
-    </div>
-  </div>
-
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
-  </body>
+      <!--Bootstrap Bundle with Popper -->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+   </body>
 </html>
+
