--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
       <!-- Required meta tags -->
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta http-equiv="X-UA-Compatible" content="ie-edge">
+      <!-- PWA -->
+      <meta name="theme-color" content ="#4dba88" />
+      <link rel="manifest" href ="manifest.json">
+      <script>
+         if ('serviceWorker' in navigator){
+            navigator.serviceWorker.register('sw.js'); }
+         ;
+      </script>
+
       <!-- Bootstrap CSS -->
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
       <link href="style.css" rel="stylesheet">
 
-      <title>Fresher's Guide | GDSC JSSSSTU</title>
+      <title>Fresher's Guide | GDSC JSSSTU</title>
     </head>
    <body>
       <div class="container-fluid">
