content replacement starters

--- a/fun.html
+++ b/fun.html
@@ -59,7 +59,11 @@
 
                           <!--Point Content-->
                           <p class="card-text">
-                              This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.
+                            Yampa is our very own McDonalds - we said what we said! Veg Sandwich, French fries and Oreo Milkshake is all you need to make your day on campus. 
+                            Things to try: Samosa bun, Oreo milkshake & French fries
+                            It's always glass half full with Yampa's chai, THE BEST. 
+                            
+                            
                           </p>
                         </div>
                       </div>
