--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,8 @@
     <div class="container-fluid main-div py-3">
 
         <div class="row d-flex justify-content-center p-3">
-          <h1 class="text-center text-white fw-bold">Got any work with the admin?</h1>
+          <h1 class="text-center text-white fw-bold">Do you have work in the admin section?
+          </h1>
         </div>
 
         <!--A Point-->
