--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          </div>
       </div>
       <div class="row welcome-row d-flex justify-content-center">
-         <div class="col-md-3 d-flex justify-content-center my-3">
+         <div class="col-lg-3 d-flex justify-content-center my-3">
            <a href="./study.html">
               <div class="card" style="width: 18rem;">
                 <div class="card-body">
@@ -53,7 +53,7 @@
             </div>
            </a>
          </div>
-         <div class="col-md-3 d-flex justify-content-center my-3">
+         <div class="col-lg-3 d-flex justify-content-center my-3">
           <a href="./fun.html">
             <div class="card" style="width: 18rem;">
                <div class="card-body">
@@ -63,12 +63,12 @@
             </div>
           </a>
          </div>
-         <div class="col-md-3 d-flex justify-content-center my-3">
+         <div class="col-lg-3 d-flex justify-content-center my-3">
            <a href="./admin.html">
             <div class="card" style="width: 18rem;">
                <div class="card-body">
                   <img src="./images/adminn.JPG" class="card-img-top" alt="Study">
-                  <p class="card-text my-3">Got any work with the admin?</p>
+                  <p class="card-text my-3">Do you have work in the admin section?</p>
                </div>
             </div>
           </a>
