--- a/study.html
+++ b/study.html
@@ -85,13 +85,16 @@
 
                         <!--Point Content-->
                         <p class="card-text">
+                          A detailed guide to get your wifi credentials -
+
                            
-A detailed guide to get your wifi credentials -
-1.Fill out the wifi form
-2.Where do you get your wifi form? Ah, our provider, MCV! Fill in the details and get a signature from your HOD.
-3.Next, find the wifi guy to get your credentials
-4.Here’s a thing about the wifi guy; no one knows where he is :) You can still find your missing pair of socks that went missing 2 years ago, but finding the wifi guy is just impossible
-5.Make sure to get your wifi credentials with enough persistence and patience, that is all you need to get your wifi access! 
+                          <ol>
+                            <li>Fill out the wifi form.</li>
+                            <li>Where do you get your wifi form? Ah, our provider, MCV! Fill in the details and get a signature from your HOD.</li>
+                            <li>Next, find the wifi guy to get your credentials</li>
+                            <li>Here's a thing about the wifi guy; no one knows where he is :) You can still find your missing pair of socks that went missing 2 years ago, but finding the wifi guy is just impossible</li>
+                            <li>Make sure to get your wifi credentials with enough persistence and patience, that is all you need to get your wifi access!</li>
+                          </ol>
 
                         </p>
                       </div>
