--- a/fun.html
+++ b/fun.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <div class="row bg-white px-3">
           <div class="col-lg-9 col-md-7 pt-3 py-md-3">
-              <h3 class="text-center text-md-start">Fresher's Guide</h3>
+              <a href="./index.html"><h3 class="text-center text-md-start">Fresher's Guide</h3></a>
           </div>
           <div class="col-lg-3 col-md-5 logo pb-2 py-md-2 d-flex justify-content-center justify-content-lg-start">
               <a href="https://dscjssstu.in" target="_blank">
@@ -47,7 +47,7 @@
 
                       <div class="col-md-4">
                         <!--Image-->
-                        <img src="..." class="img-fluid rounded-start" alt="pic">
+                        <img src="./images/yampa.jpeg" class="img-fluid rounded-start" alt="pic">
                       </div>
 
                       <div class="col-md-8">
@@ -81,7 +81,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/lkb.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -114,7 +114,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/kushi.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -147,7 +147,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/kushi_sweet.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -179,7 +179,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/mylari.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -213,7 +213,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/kannan.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -245,7 +245,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/frappe.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -278,7 +278,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/nescafe.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -317,7 +317,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/cs_lawnn.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -348,7 +348,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/football_ground.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -380,7 +380,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/bb_court.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -411,7 +411,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/gym.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -443,7 +443,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/parking.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -475,7 +475,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/doggy.png" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
