--- a/study.html
+++ b/study.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <div class="row bg-white px-3">
           <div class="col-lg-9 col-md-7 pt-3 py-md-3">
-              <h3 class="text-center text-md-start">Fresher's Guide</h3>
+            <a href="./index.html"><h3 class="text-center text-md-start">Fresher's Guide</h3></a>
           </div>
           <div class="col-lg-3 col-md-5 logo pb-2 py-md-2 d-flex justify-content-center justify-content-lg-start">
               <a href="https://dscjssstu.in" target="_blank">
@@ -41,7 +41,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/CS_Lawn.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -73,7 +73,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/wifi.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -91,9 +91,7 @@
                           <ol>
                             <li>Fill out the wifi form.</li>
                             <li>Where do you get your wifi form? Ah, our provider, MCV! Fill in the details and get a signature from your HOD.</li>
-                            <li>Next, find the wifi guy to get your credentials</li>
-                            <li>Here's a thing about the wifi guy; no one knows where he is :) You can still find your missing pair of socks that went missing 2 years ago, but finding the wifi guy is just impossible</li>
-                            <li>Make sure to get your wifi credentials with enough persistence and patience, that is all you need to get your wifi access!</li>
+                            <li>Next, find the wifi guy to get your credentials with enough persistence and patience!</li>
                           </ol>
 
                         </p>
@@ -113,7 +111,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/reference.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -147,7 +145,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/GJB(Super_Computer).jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -178,7 +176,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/MCV.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -209,7 +207,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/stationery.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -242,7 +240,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/pnb.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -274,7 +272,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/SJCE_CO-operative_Society.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -307,7 +305,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/library.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -341,7 +339,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/Quadrangle.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
