--- a/admin.html
+++ b/admin.html
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <div class="row bg-white px-3">
           <div class="col-lg-9 col-md-7 pt-3 py-md-3">
-              <h3 class="text-center text-md-start">Fresher's Guide</h3>
+            <a href="./index.html"><h3 class="text-center text-md-start">Fresher's Guide</h3></a>
           </div>
           <div class="col-lg-3 col-md-5 logo pb-2 py-md-2 d-flex justify-content-center justify-content-lg-start">
               <a href="https://dscjssstu.in" target="_blank">
@@ -42,7 +42,7 @@
 
                       <div class="col-md-4">
                         <!--Image-->
-                        <img src="..." class="img-fluid rounded-start" alt="pic">
+                        <img src="./images/Admin_Block.jpg" class="img-fluid rounded-start" alt="pic">
                       </div>
 
                       <div class="col-md-8">
@@ -77,7 +77,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="..." class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/MBA_Block.jpg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
