--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
          </div>
       </div>
       <div class="row welcome-row d-flex justify-content-center">
-         <div class="col-lg-3 d-flex justify-content-center my-3">
+         <div class="col-xl-3 d-flex justify-content-center my-3">
            <a href="./study.html">
               <div class="card" style="width: 18rem;">
                 <div class="card-body">
@@ -53,7 +53,7 @@
             </div>
            </a>
          </div>
-         <div class="col-lg-3 d-flex justify-content-center my-3">
+         <div class="col-xl-3 d-flex justify-content-center my-3">
           <a href="./fun.html">
             <div class="card" style="width: 18rem;">
                <div class="card-body">
@@ -63,7 +63,7 @@
             </div>
           </a>
          </div>
-         <div class="col-lg-3 d-flex justify-content-center my-3">
+         <div class="col-xl-3 d-flex justify-content-center my-3">
            <a href="./admin.html">
             <div class="card" style="width: 18rem;">
                <div class="card-body">
