--- a/study.html
+++ b/study.html
@@ -351,7 +351,7 @@
 
                         <!--Point Content-->
                         <p class="card-text">
-                          All your flag hoisting happens here. We have a World war period aircraft on display too!
+                          All your flag hoisting happens here!
 
                         </p>
                       </div>
