--- a/fun.html
+++ b/fun.html
@@ -179,7 +179,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/mylari.jpg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/actualmylari.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
@@ -191,7 +191,7 @@
 
                         <!--Point Content-->
                         <p class="card-text">
-                          Mylari is the direct way to the heart and your stomach.  Chinese, North Indian, South Indian, Chats, Cool Drinks and the list is endless. 
+                          Mylari is the direct way to the heart and your stomach. Chinese, North Indian, South Indian, Chats, Cool Drinks and the list is endless. 
                           Mylari's Chai is worth every sip, Chai peelo friends! 
                           If you get a chair and table with your friends at Mylari, it's a good day for you. 
                           
@@ -317,7 +317,7 @@
 
                     <div class="col-md-4">
                       <!--Image-->
-                      <img src="./images/cs_lawnn.jpg" class="img-fluid rounded-start" alt="pic">
+                      <img src="./images/actualcslawn.jpeg" class="img-fluid rounded-start" alt="pic">
                     </div>
 
                     <div class="col-md-8">
