--- a/admin.html
+++ b/admin.html
@@ -50,6 +50,16 @@
                           <!--Point Title-->
                           <h5 class="card-title">
                               Admin Block
+
+                              <!--Maps Link-->
+                              <a href="https://goo.gl/maps/x4va1oCsjJj4Rytr9" class="map-link">
+                                <span class="float-end pe-2">
+                                  <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                    <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                                  </svg>
+                                </span>
+                              </a>
+                              
                           </h5>
 
                           <!--Point Content-->
