--- a/admin.html
+++ b/admin.html
@@ -111,6 +111,44 @@
           </div>
       </div>
 
+      <div class="row d-flex justify-content-center p-3">
+        <div class="col-md-8">
+            <div class="card mb-3">
+                <div class="row g-0">
+
+                  <div class="col-md-4">
+                    <!--Image-->
+                    <img src="./images/doctors.jpg" class="img-fluid rounded-start" alt="pic">
+                  </div>
+
+                  <div class="col-md-8">
+                    <div class="card-body py-4">
+                      <!--Point Title-->
+                      <h5 class="card-title">
+                          On-campus Doctors
+                          <!--Maps Link-->
+                          <a href="https://maps.app.goo.gl/tuLLYju1CHkwHuum7" class="map-link">
+                            <span class="float-end pe-2">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                                <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
+                              </svg>
+                            </span>
+                          </a>
+                      </h5>
+
+                      <!--Point Content-->
+                      <p class="card-text">
+                        Everything related to fee related queries, you know where to go! 
+                        This section is part of the MBA block.
+                        
+                      </p>
+                    </div>
+                  </div>
+                  
+                </div>
+              </div>
+        </div>
+    </div>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
