Updated card with new content for admin section

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="./fun.html">
             <div class="card" style="width: 18rem;">
                <div class="card-body">
-                  <img src="./images/fun.JPG" class="card-img-top" alt="Study">
+                  <img src="./images/fun.JPG" class="card-img-top" alt="Fun">
                   <p class="card-text my-3">Are you in the mood to have fun?</p>
                </div>
             </div>
@@ -67,8 +67,8 @@
            <a href="./admin.html">
             <div class="card" style="width: 18rem;">
                <div class="card-body">
-                  <img src="./images/adminn.JPG" class="card-img-top" alt="Study">
-                  <p class="card-text my-3">Do you have work in the admin section?</p>
+                  <img src="./images/adminn.JPG" class="card-img-top" alt="Admin">
+                  <p class="card-text my-3">Do you know about all the essential amenities?</p>
                </div>
             </div>
           </a>
