--- a/fun.html
+++ b/fun.html
@@ -388,8 +388,8 @@
                       <div class="card-body py-4">
                         <!--Point Title-->
                         <h5 class="card-title">
-                            CS Lawn
-                          <a href="" class="map-link">
+                          CS Lawn
+                          <a href="https://goo.gl/maps/A8PTiLpLZrcGeX6B9" class="map-link">
                             <span class="float-end pe-2">
                               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                                 <path d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"/>
@@ -608,7 +608,13 @@
                   </div>
                 </div>
           </div>
-      </div>
+        
+          <div class="row">
+            <div class="col">
+              <h4 class="text-center mt-2 text-white fw-bold">These are just some of the many fun spots to hangout, explore the rest on your own!
+</h4>
+           </div>
+          </div>
 
                                                             
     </div>
