CTA for membership

--- a/index.html
+++ b/index.html
@@ -37,41 +37,48 @@
      </div>
   
       <div class="container-fluid main-div">
-      <div class="row align-items-start">
-         <div class="col">
-            <h1 class="text-center text-white p-5 fw-bold">Welcome Buddy!</h1>
-         </div>
-      </div>
-      <div class="row welcome-row d-flex justify-content-center">
-         <div class="col-xl-3 d-flex justify-content-center my-3">
-           <a href="./study.html">
-              <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                  <img src="./images/Study.JPG" class="card-img-top" alt="Study">
-                  <p class="card-text my-3">Are you in the mood to study?</p>
-                </div>
+         <div class="row align-items-start">
+            <div class="col">
+               <h1 class="text-center text-white p-5 fw-bold">Welcome Buddy!</h1>
             </div>
-           </a>
          </div>
-         <div class="col-xl-3 d-flex justify-content-center my-3">
-          <a href="./fun.html">
-            <div class="card" style="width: 18rem;">
-               <div class="card-body">
-                  <img src="./images/fun.JPG" class="card-img-top" alt="Fun">
-                  <p class="card-text my-3">Are you in the mood to have fun?</p>
+         <div class="row welcome-row d-flex justify-content-center">
+            <div class="col-xl-3 d-flex justify-content-center my-3">
+            <a href="./study.html">
+               <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                     <img src="./images/Study.JPG" class="card-img-top" alt="Study">
+                     <p class="card-text my-3">Are you in the mood to study?</p>
+                  </div>
                </div>
+            </a>
             </div>
-          </a>
-         </div>
-         <div class="col-xl-3 d-flex justify-content-center my-3">
-           <a href="./admin.html">
-            <div class="card" style="width: 18rem;">
-               <div class="card-body">
-                  <img src="./images/adminn.JPG" class="card-img-top" alt="Admin">
-                  <p class="card-text my-3">Do you know about all the essential amenities?</p>
+            <div class="col-xl-3 d-flex justify-content-center my-3">
+            <a href="./fun.html">
+               <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                     <img src="./images/fun.JPG" class="card-img-top" alt="Fun">
+                     <p class="card-text my-3">Are you in the mood to have fun?</p>
+                  </div>
                </div>
+            </a>
             </div>
-          </a>
+            <div class="col-xl-3 d-flex justify-content-center my-3">
+            <a href="./admin.html">
+               <div class="card" style="width: 18rem;">
+                  <div class="card-body">
+                     <img src="./images/adminn.JPG" class="card-img-top" alt="Admin">
+                     <p class="card-text my-3">Do you know about all the essential amenities?</p>
+                  </div>
+               </div>
+            </a>
+            </div>
+         </div>
+         <hr/>
+         <div class="pt-2 px-1 px-md-5 pb-5">
+            <h5 class="text-center text-white fw-bold px-5">Do you want to be a part of a community that makes fun projects like these?</h5>
+            <a href="https://gdsc.community.dev/jss-science-technology-university-mysuru/" target="_blank" style="text-align:center;display:block;">
+               <span class="btn btn-secondary">Join now!</span></a>
          </div>
       </div>
 
