--- a/admin.html
+++ b/admin.html
@@ -30,7 +30,7 @@
     <div class="container-fluid main-div py-3">
 
         <div class="row d-flex justify-content-center p-3">
-          <h1 class="text-center text-white fw-bold">Do you have work in the admin section?
+          <h1 class="text-center text-white fw-bold">Do you know about all the essential amenities?
           </h1>
         </div>
 
@@ -157,7 +157,7 @@
                       </div>
                 </div>
             </div>
-            
+
       <div class="row d-flex justify-content-center p-3">
         <div class="col-md-8">
             <div class="card mb-3">
